# Blockchain-

./: BACKEND_IMPLEMENTATION.md  CLI_WALLET.md  Cargo.toml  DEPLOYMENT_STATUS.md  DEPLOY_PHASE9_10.md  EVM_COMPATIBILITY.md  GOVERNANCE_DESIGN.md  PHASE10.md  PHASE9_DEPLOYMENT.md  PHASE9_SUMMARY.md  PROJECT_AUDIT.md  PROJECT_STATUS.md  README.md  RPC_ACCESS.md  STAKING_DESIGN.md  startup.sh  verify-deployment.ps1
act20-token/: Cargo.toml
act20-token/src/: lib.rs
act721-nft/: Cargo.toml
act721-nft/src/: lib.rs
bridge/: Cargo.toml
bridge/src/: lib.rs
cli-wallet/: Cargo.toml
cli-wallet/src/: commands.rs  main.rs  rpc_client.rs  wallet_storage.rs
consensus/: Cargo.toml  lib.rs
consensus/src/: lib.rs
contracts/dex/: Cargo.toml
contracts/dex/src/: lib.rs
contracts/event-test/: Cargo.toml
contracts/event-test/src/: lib.rs
crypto/: Cargo.toml  lib.rs
crypto/src/: lib.rs
defi-lending/: Cargo.toml
defi-lending/src/: lib.rs
examples/: rpc_client.rs  send_transaction.rs
explorer/: Cargo.toml
explorer/src/: main.rs  rpc_client.rs
explorer/static/: index.html
governance/: Cargo.toml
governance/src/: lib.rs
layer2-rollup/: Cargo.toml
layer2-rollup/src/: lib.rs
mempool/: Cargo.toml
mempool/src/: lib.rs
node/: Cargo.toml  main.rs
node/src/: main.rs  p2p.rs
oracle-network/: Cargo.toml
oracle-network/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: health.rs  lib.rs  metrics.rs
runtime/: Cargo.toml  lib.rs
runtime/src/: lib.rs
sdk/: README.md  package-lock.json  package.json
sdk/examples/: basic.ts
sdk/src/: client.ts  contract.ts  types.ts  utils.ts  wallet.ts
staking/: Cargo.toml
staking/src/: lib.rs
state/: Cargo.toml
state/src/: lib.rs
storage/: Cargo.toml  lib.rs
storage/src/: lib.rs
types/: Cargo.toml  lib.rs
types/src/: lib.rs
wallet/: Cargo.toml
wallet/src/: lib.rs
