[workspace]
members = [
    "node",
    "consensus",
    "runtime",
    "crypto",
    "storage",
    "types",
    "wallet",
    "state",
    "mempool",
    "rpc"
]

[profile.release]
opt-level = 3

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
