[workspace]
members = [
    "node",
    "consensus",
    "runtime",
    "crypto",
    "storage",
    "types",
    "wallet",
    "state",
    "mempool",
    "rpc",
    "cli-wallet",
    "explorer",
    "staking",
    "governance",
    "act20-token",
    "contracts/dex"
]
resolver = "2"

[profile.release]
opt-level = 3
