[workspace]
members = [
    "node",
    "consensus",
    "runtime",
    "crypto",
    "storage",
    "types",
    "wallet",
    "state",
    "mempool",
    "rpc",
    "cli-wallet",
    "explorer",
    "staking",
    "governance",
    "act20-token",
    "contracts/dex",
    "bridge",
    "act721-nft",
    "defi-lending",
    "layer2-rollup",
    "oracle-network"
]
resolver = "2"

[profile.release]
opt-level = 3
