[package]
name = "cli-wallet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "act-wallet"
path = "src/main.rs"

[dependencies]
wallet = { path = "../wallet" }
types = { path = "../types" }
crypto = { path = "../crypto" }

clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
rpassword = "7.3"
colored = "2.1"
