[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
crypto = { path = "../crypto" }
runtime = { path = "../runtime" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
