[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "2"
sha3 = "0.10"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
bs58 = "0.5"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
secp256k1 = { version = "0.29", features = ["rand", "recovery"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
