[package]
name = "explorer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "act-explorer"
path = "src/main.rs"

[dependencies]
types = { path = "../types" }

axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
