[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.52", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "mdns", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
consensus = { path = "../consensus" }
runtime = { path = "../runtime" }
types = { path = "../types" }
state = { path = "../state" }
mempool = { path = "../mempool" }
storage = { path = "../storage" }
wallet = { path = "../wallet" }
anyhow = "1"
