[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1"
types = { path = "../types" }
state = { path = "../state" }
mempool = { path = "../mempool" }
storage = { path = "../storage" }
wallet = { path = "../wallet" }
